Opened 5 years ago

Closed 5 years ago

Last modified 5 years ago

#15685 closed bug (fixed)

[Input preference] inconsistent dialog buttons location

Reported by: X512 Owned by: PreetpalKaur
Priority: normal Milestone: R1/beta2
Component: Preferences/Input Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

This is hrev53835.

Input preference built from hrev53839.

When changing item in list, Defaults, Revert and horizontal line change position.

Change History (2)

comment:1 by pulkomandy, 5 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev53906.

comment:2 by nielx, 5 years ago

Milestone: UnscheduledR1/beta2

Assign tickets with status=closed and resolution=fixed within the R1/beta2 development window to the R1/beta2 Milestone

Note: See TracTickets for help on using tickets.