Input preference: inconsistent dialog buttons location.

Fixes #15685

Change-Id: I38a48394ba45c7c53208e4333c797ec0b2310c96
Reviewed-on: https://review.haiku-os.org/c/haiku/+/2262
Reviewed-by: Adrien Destugues <pulkomandy@gmail.com>